--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "start:dev": "nodemon --watch",
     "watch": "node-sass --watch public/scss/app.scss public/css/app.css"
   },
