--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "start:dev": "nodemon --watch",
+    "start:dev": "node --watch",
     "watch": "node-sass --watch public/scss/app.scss public/css/app.css"
   },
   "author": "",
