--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "muter": "^0.7.0",
-    "node-sass": "^7.0.3"
+    "node-sass": "^7.0.3",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
