--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "node --watch",
+    "start": "nodemon index.js",
+    "start:dev": "nodemon --watch",
     "watch": "node-sass --watch public/scss/app.scss public/css/app.css"
   },
   "author": "",
@@ -27,9 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "muter": "^0.7.0",
-    "node-sass": "^7.0.3",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0"
+    "node-sass": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
